Enhance histogram data handling and visualization
- Updated SQL query in getHistogramSource.php to include guest names and ensure proper ordering of results.
- Improved date parsing logic to handle both datetime and date formats.
- Added guest name to the histogram data structure for better identification.
- Enhanced error logging in timeline-unified.html for clearer debugging of histogram data fetching.
- Adjusted histogram data processing in timeline-unified.js to ensure proper handling of empty data scenarios.
- Refined rendering logic in timeline-unified.js to improve clarity of grid lines and labels in the histogram visualization.

--- a/zp/timeline-unified.html
+++ b/zp/timeline-unified.html
@@ -286,22 +286,32 @@
 
                 let histogramSource = [];
                 const histogramResponse = await histogramFetchPromise;
+                console.log('🔍 Histogramm Response:', histogramResponse);
+
                 if (histogramResponse instanceof Response && histogramResponse.ok) {
                     try {
                         const histogramJson = await histogramResponse.json();
+                        console.log('📊 Histogramm JSON:', histogramJson);
+
                         if (histogramJson && histogramJson.success && histogramJson.data?.histogram) {
                             histogramSource = histogramJson.data.histogram.map(entry => ({
                                 id: Number(entry.id),
                                 start: entry.start,
                                 end: entry.end,
+                                guest_name: entry.guest_name || '',
                                 capacity_details: entry.capacity_details || {}
                             }));
+                            console.log(`✅ ${histogramSource.length} Histogramm-Einträge verarbeitet`);
+                        } else {
+                            console.warn('❌ Histogramm JSON hat keine gültige Struktur:', histogramJson);
                         }
                     } catch (histError) {
-                        console.warn('Histogrammdaten konnten nicht geparst werden:', histError);
+                        console.warn('❌ Histogrammdaten konnten nicht geparst werden:', histError);
                     }
                 } else if (histogramResponse instanceof Error) {
-                    console.warn('Histogrammdaten konnten nicht geladen werden:', histogramResponse.message);
+                    console.warn('❌ Histogrammdaten konnten nicht geladen werden:', histogramResponse.message);
+                } else {
+                    console.warn('❌ Histogramm Response nicht OK:', histogramResponse?.status, histogramResponse?.statusText);
                 }
 
                 window.histogramSource = histogramSource;
